[gd_scene load_steps=11 format=3 uid="uid://bpntl0o8l2tk8"]

[ext_resource type="Script" path="res://scenes/arena.gd" id="1_d0wg2"]
[ext_resource type="Resource" uid="uid://bhydli7hp4r5t" path="res://custom_resources/normal.tres" id="2_g6vfp"]
[ext_resource type="PackedScene" uid="uid://cfud7si3v0drb" path="res://scenes/wall.tscn" id="3_icmar"]
[ext_resource type="PackedScene" uid="uid://dgregjbht40m" path="res://scenes/paddle/paddle.tscn" id="4_kwc8t"]
[ext_resource type="PackedScene" uid="uid://dbbyopb0vwmjj" path="res://scenes/ball/ball_follower.tscn" id="5_jql2h"]
[ext_resource type="Script" path="res://scenes/UI/submit_score_container.gd" id="6_ghxqo"]
[ext_resource type="PackedScene" uid="uid://ddln5a65pw4wh" path="res://scenes/UI/score_menu.tscn" id="6_ye35s"]
[ext_resource type="PackedScene" uid="uid://d2xbyhclfh1a8" path="res://scenes/UI/lives_indicator.tscn" id="8_wtmtn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5tp2"]
size = Vector2(687, 1213)

[sub_resource type="Environment" id="Environment_oav6s"]
glow_enabled = true
glow_normalized = true
glow_intensity = 1.7
glow_bloom = 1.0

[node name="Arena" type="Node2D" groups=["arena"]]
process_mode = 3
script = ExtResource("1_d0wg2")
levels = ExtResource("2_g6vfp")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(667, 1152)
offset_right = 667.0
offset_bottom = 1152.0
size_flags_horizontal = 0
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 667.0
offset_bottom = 1152.0
stretch = true
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(667, 1152)
size_2d_override = Vector2i(333, 576)
size_2d_override_stretch = true
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="BallFollower" parent="SubViewportContainer/SubViewport" groups=["ball_follower"] instance=ExtResource("5_jql2h")]
position = Vector2(-100, 0)
rotation = 0.785398

[node name="Walls" type="Node2D" parent="."]

[node name="Wall" parent="Walls" groups=["side_wall"] instance=ExtResource("3_icmar")]
position = Vector2(663, 92)

[node name="Wall2" parent="Walls" groups=["side_wall"] instance=ExtResource("3_icmar")]
position = Vector2(7, 92)

[node name="Wall3" parent="Walls" groups=["top_wall"] instance=ExtResource("3_icmar")]
position = Vector2(1018, 85)
rotation = 1.5708

[node name="ArenaArea" type="Area2D" parent="Walls"]
collision_layer = 4
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/ArenaArea"]
position = Vector2(333.5, 596.5)
shape = SubResource("RectangleShape2D_o5tp2")

[node name="BlockLines" type="Node2D" parent="."]
position = Vector2(15, 173)

[node name="Paddle" parent="." instance=ExtResource("4_kwc8t")]
position = Vector2(388, 1130)

[node name="BallSpawnVector" type="RayCast2D" parent="."]
position = Vector2(27, 729)
enabled = false
target_position = Vector2(376, 517)
collide_with_bodies = false

[node name="Events" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PointsLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 58
text = "0"

[node name="SubmitScoreContainer" type="HBoxContainer" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(0, 40)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -196.5
offset_top = 368.0
offset_right = 196.5
offset_bottom = 408.0
grow_horizontal = 2
script = ExtResource("6_ghxqo")

[node name="Label" type="Label" parent="CanvasLayer/SubmitScoreContainer"]
layout_mode = 2
text = "Your name:      "

[node name="TextEdit" type="LineEdit" parent="CanvasLayer/SubmitScoreContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "Your name here"

[node name="SubmitButton" type="Button" parent="CanvasLayer/SubmitScoreContainer"]
layout_mode = 2
disabled = true
text = "Submit score"

[node name="GameOverMenu" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -196.5
offset_top = 598.0
offset_right = 196.5
offset_bottom = 625.0
grow_horizontal = 2

[node name="ScoreMenu" parent="CanvasLayer/GameOverMenu" instance=ExtResource("6_ye35s")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 0

[node name="LivesIndicator" parent="CanvasLayer" instance=ExtResource("8_wtmtn")]
unique_name_in_owner = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_oav6s")

[connection signal="area_exited" from="Walls/ArenaArea" to="." method="_on_arena_area_exited"]
[connection signal="score_submit" from="CanvasLayer/SubmitScoreContainer" to="." method="_on_submit_score_container_score_submit"]
[connection signal="text_changed" from="CanvasLayer/SubmitScoreContainer/TextEdit" to="CanvasLayer/SubmitScoreContainer" method="_on_text_edit_text_changed"]
[connection signal="text_submitted" from="CanvasLayer/SubmitScoreContainer/TextEdit" to="CanvasLayer/SubmitScoreContainer" method="_on_text_edit_text_submitted"]
[connection signal="button_up" from="CanvasLayer/SubmitScoreContainer/SubmitButton" to="CanvasLayer/SubmitScoreContainer" method="_on_submit_button_button_up"]
